--- a/ex_operational.tex
+++ b/ex_operational.tex
@@ -1,38 +1,161 @@
 \begin{figure}[t]
   \linefigure
+  \centering
+    \scalebox{0.6}{%
+      \begin{tikzpicture}[->,>=stealth',node distance=1.5cm]
+        \node[syntax] (A)
+        {$\checkmark\paral(\fB;\checkmark\paral\fC;\checkmark)$};
+        \node[syntax] (B) [below left=1cm and 4cm of A]{$\checkmark\paral(\checkmark\paral\fC;\checkmark)$};
+        \node[syntax] (C) [below left=1cm and -.5cm of A]{$\checkmark\paral\fC;\checkmark$};
+        \node[syntax] (D) [below right=1cm and 5cm of A]{$\checkmark\paral(\fB\checkmark\paral\checkmark)$};
+        \node[syntax] (E) [below right=1cm and -.5cm of A]{$\fB;\checkmark\paral\checkmark$};
+
+        \node[syntax] (B1) [below left=1cm and 1cm of B]{$\checkmark\paral(\checkmark\paral\checkmark)$};
+        \node[syntax] (B2) [below left=1cm and -0.7cm of B]{$\checkmark\paral(\checkmark)$};
+        \node[syntax] (B3) [below right=1cm and -0.7cm of B]{$(\checkmark\paral\checkmark)$};
+        \node[syntax] (B4) [below right=1cm and 1cm of B]{$\checkmark$};
+        \node[syntax] (D1) [below left=1cm and 1cm of D]{$\checkmark\paral(\checkmark\paral\checkmark)$};
+        \node[syntax] (D2) [below left=1cm and -0.7cm of D]{$\checkmark\paral(\checkmark)$};
+        \node[syntax] (D3) [below right=1cm and -0.7cm of D]{$(\checkmark\paral\checkmark)$};
+        \node[syntax] (D4) [below right=1cm and 1cm of
+        D]{$\checkmark$};
+
+        \node[syntax] (C1) [below left=1cm and -.5cm of C]{$\checkmark\paral\checkmark$};
+        \node[syntax] (C2) [below right=1cm and -.5cm of C]{$\checkmark$};
+        \node[syntax] (E1) [below left=1cm and -.5cm of E]{$\checkmark\paral\checkmark$};
+        \node[syntax] (E2) [below right=1cm and -.5cm of E]{$\checkmark$};
+
+        \node[syntax] (B11) [below=1cm of B1] {$\nil$};
+        \node[syntax] (B21) [below=1cm of B2] {$\nil$};
+        \node[syntax] (B31) [below=1cm of B3] {$\nil$};
+        \node[syntax] (B41) [below=1cm of B4] {$\nil$};
+        \node[syntax] (D11) [below=1cm of D1] {$\nil$};
+        \node[syntax] (D21) [below=1cm of D2] {$\nil$};
+        \node[syntax] (D31) [below=1cm of D3] {$\nil$};
+        \node[syntax] (D41) [below=1cm of D4] {$\nil$};
+        \node[syntax] (C11) [below=1cm of C1] {$\nil$};
+        \node[syntax] (C21) [below=1cm of C2] {$\nil$};
+        \node[syntax] (E11) [below=1cm of E1] {$\nil$};
+        \node[syntax] (E21) [below=1cm of E2] {$\nil$};
+
+        \path
+        (A) edge[->] node[above, opacity=0, text opacity=1]
+        {$\fB,\frac{1}{4}$}
+        (B);
+        \path
+        (A) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fB,\frac{1}{4}$}
+        (C);
+        \path (A) edge[->] node[above, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{4}$}
+        (D);
+        \path (A) edge[->] node[right, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{4}$}
+        (E);
+
+        \path (B) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{4}$} (B1);
+        \path (B) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{4}$} (B2);
+        \path (B) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{4}$} (B3);
+        \path (B) edge[->] node[right, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{4}$} (B4);
+        \path (D) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fB,\frac{1}{4}$} (D1);
+        \path (D) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fB,\frac{1}{4}$} (D2);
+        \path (D) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fB,\frac{1}{4}$} (D3);
+        \path (D) edge[->] node[right, opacity=0, text opacity=1]
+        {$\fB\frac{1}{4}$} (D4);
+
+        \path (E) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fB,\frac{1}{2}$} (E1);
+        \path (E) edge[->] node[right, opacity=0, text opacity=1]
+        {$\fB,\frac{1}{2}$} (E2);
+
+       \path (C) edge[->] node[left, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{2}$} (C1);
+        \path (C) edge[->] node[right, opacity=0, text opacity=1]
+        {$\fC,\frac{1}{2}$} (C2);
+        \path (C1) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (C11);
+        \path (C2) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (C21);
+        \path (E1) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (E11);
+        \path (E2) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (E21);
+        \path (B1) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (B11);
+        \path (B2) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (B21);
+        \path (B3) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (B31);
+        \path (B4) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (B41);
+        \path (D1) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (D11);
+        \path (D2) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (D21);
+        \path (D3) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (D31);
+        \path (D4) edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark$} (D41);
+
+
+      \end{tikzpicture}}
+        \caption{Examples of the operational semantics (1/3).\label{example:op1}}
+\end{figure}
+\begin{figure}[t]
+  \linefigure
   \begin{minipage}{.7\hsize}
     \centering
-    \scalebox{0.65}
+    \scalebox{0.6}
     {
       \begin{tikzpicture}[->,>=stealth',node distance=1.5cm]
         \node[syntax] (A) {$\fA;\checkmark\paral(\fB;\checkmark\paral
           \fC;\checkmark)$};
-        \node[syntax] (B) [below left=2cm of A] {$\checkmark\paral(\fB;\checkmark\paral
+        \node[syntax] (B) [below left=1cm of A] {$\checkmark\paral(\fB;\checkmark\paral
           \fC;\checkmark)$};
-        \node[syntax] (C) [right=1cm of B] {$\fA;\checkmark\paral(\checkmark\paral
+        \node[syntax] (C) [below left=7cm and -1cm of A] {$\fA;\checkmark\paral(\checkmark\paral
           \fC;\checkmark)$};
-        \node[syntax] (D) [right=1cm of C] {$\fA;\checkmark\paral(\fB;\checkmark\paral
+        \node[syntax] (D) [below right=1cm of A] {$\fA;\checkmark\paral(\fB;\checkmark\paral
           \checkmark)$};
         \node[syntax] (B1) [below=1cm of B] {$\fB\checkmark\paral\checkmark$};
-        \node[syntax] (B2) [left=0.7cm of B1] {$\checkmark\paral\fC;\checkmark$};
-        \node[syntax] (B11) [below=1cm of B1] {$\checkmark$};
-        \node[syntax] (B21) [below=1cm of B2] {$\checkmark$};
-        \node[syntax] (C1) [right=0.5cm of B1] {$\checkmark\paral(\checkmark\paral
+        \node[syntax] (B2) [left=1.5cm of B1] {$\checkmark\paral\fC;\checkmark$};
+        \node[syntax] (B11) [below left=1cm and 0cm of B1] {$\checkmark$};
+        \node[syntax] (B12) [below right=1cm and -0.5cm of B1] {$\checkmark\paral\checkmark$};
+        \node[syntax] (B21) [below left=1cm and 0cm of B2] {$\checkmark$};
+        \node[syntax] (B22) [below right=1cm and -0.5cm of B2] {$\checkmark\paral\checkmark$};
+        \node[syntax] (C1) [below left=1cm and -0.5cm of C] {$\checkmark\paral(\checkmark\paral
           \fC;\checkmark)$};
-        \node[syntax] (C2) [right=0.5cm of C1] {$\fA;\checkmark\paral\checkmark$};
-        \node[syntax] (C11) [below=1cm of C1] {$\checkmark$};
-        \node[syntax] (C21) [below=1cm of C2] {$\checkmark$};
-        \node[syntax] (D1) [right=0.5cm of C2] {$\checkmark\paral(\fB;\checkmark\paral
+        \node[syntax] (C2) [below right=1cm and -0.5cm of C] {$\fA;\checkmark\paral\checkmark$};
+        \node[syntax] (C11) [below left=1cm and 0cm of C1]
+        {$\checkmark$};
+        \node[syntax] (C12) [below right=1cm and -0.5cm of C1] {$\checkmark\paral\checkmark$};
+        \node[syntax] (C21) [below left=1cm and 0cm of C2] {$\checkmark$};
+        \node[syntax] (C22) [below right=1cm and -0.5cm of C2] {$\checkmark\paral\checkmark$};
+        \node[syntax] (D1) [below left=1cm and -0.5cm of D] {$\checkmark\paral(\fB;\checkmark\paral
           \checkmark)$};
-        \node[syntax] (D2) [right=0.5cm of D1] {$\fA;\checkmark\paral\checkmark$};
-        \node[syntax] (D11) [below=1cm of D1] {$\checkmark$};
-        \node[syntax] (D21) [below=1cm of D2] {$\checkmark$};
+        \node[syntax] (D2) [below right=1cm and -0.5cm of D] {$\fA;\checkmark\paral\checkmark$};
+        \node[syntax] (D11) [below left=1cm and 0cm of D1] {$\checkmark$};
+        \node[syntax] (D12) [below right=1cm and -0.5cm of D1] {$\checkmark\paral\checkmark$};
+        \node[syntax] (D21) [below left=1cm and 0cm of D2] {$\checkmark$};
+        \node[syntax] (D22) [below right=1cm and -0.5cm of D2] {$\checkmark\paral\checkmark$};
         \node[syntax] (B111) [below=1cm of B11] {$\nil$};
+        \node[syntax] (B121) [below=1cm of B12] {$\nil$};
         \node[syntax] (B211) [below=1cm of B21] {$\nil$};
+        \node[syntax] (B221) [below=1cm of B22] {$\nil$};
         \node[syntax] (C111) [below=1cm of C11] {$\nil$};
+        \node[syntax] (C121) [below=1cm of C12] {$\nil$};
         \node[syntax] (C211) [below=1cm of C21] {$\nil$};
+        \node[syntax] (C221) [below=1cm of C22] {$\nil$};
         \node[syntax] (D111) [below=1cm of D11] {$\nil$};
+        \node[syntax] (D121) [below=1cm of D12] {$\nil$};
         \node[syntax] (D211) [below=1cm of D21] {$\nil$};
+        \node[syntax] (D221) [below=1cm of D22] {$\nil$};
 
         \path
         (A) edge[->] node[above, opacity=0, text opacity=1]
@@ -51,13 +174,20 @@
         {$\feature{B},\frac{1}{2}$}
         (B2)
         (B2)
-        edge[->] node[right, opacity=0, text opacity=1]
-        {$\feature{C},1$}
+        edge[->] node[left, opacity=0, text opacity=1]
+        {$\feature{C},\frac{1}{2}$}
         (B21)
-        (B1)
+        (B2)
         edge[->] node[right, opacity=0, text opacity=1]
-        {$\feature{B},1$}
+        {$\feature{C},\frac{1}{2}$}
+        (B22)
+        (B1)
+        edge[->] node[left, opacity=0, text opacity=1]
+        {$\feature{B},\frac{1}{2}$}
         (B11)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\feature{B},\frac{1}{2}$}
+        (B12)
         (C) edge[->] node[right, opacity=0, text opacity=1]
         {$\feature{A},\frac{1}{2}$}
         (C1)
@@ -65,13 +195,20 @@
         {$\feature{C},\frac{1}{2}$}
         (C2)
         (C2)
-        edge[->] node[right, opacity=0, text opacity=1]
-        {$\feature{A},1$}
+        edge[->] node[left, opacity=0, text opacity=1]
+        {$\feature{A},\frac{1}{2}$}
         (C21)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\feature{A},\frac{1}{2}$}
+        (C22)
+        (C1)
+        edge[->] node[left, opacity=0, text opacity=1]
+        {$\feature{C},\frac{1}{2}$}
+        (C11)
         (C1)
         edge[->] node[right, opacity=0, text opacity=1]
-        {$\feature{C},1$}
-        (C11)
+        {$\feature{C},\frac{1}{2}$}
+        (C12)
         (D) edge[->] node[right, opacity=0, text opacity=1]
         {$\feature{A},\frac{1}{2}$}
         (D1)
@@ -79,37 +216,69 @@
         {$\feature{B},\frac{1}{2}$}
         (D2)
         (D2)
-        edge[->] node[right, opacity=0, text opacity=1]
-        {$\feature{A},1$}
+        edge[->] node[left, opacity=0, text opacity=1]
+        {$\feature{A},\frac{1}{2}$}
         (D21)
+        (D2)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\feature{A},\frac{1}{2}$}
+        (D22)
+        (D1)
+        edge[->] node[left, opacity=0, text opacity=1]
+        {$\feature{B},\frac{1}{2}$}
+        (D11)
         (D1)
         edge[->] node[right, opacity=0, text opacity=1]
-        {$\feature{B},1$}
-        (D11)
+        {$\feature{B},\frac{1}{2}$}
+        (D12)
         (B11)
         edge[->] node[right, opacity=0, text opacity=1]
         {$\checkmark,1$}
         (B111)
+        (B12)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark,1$}
+        (B121)
         (B21)
         edge[->] node[right, opacity=0, text opacity=1]
         {$\checkmark,1$}
         (B211)
+        (B22)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark,1$}
+        (B221)
         (C11)
         edge[->] node[right, opacity=0, text opacity=1]
         {$\checkmark,1$}
         (C111)
+        (C12)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark,1$}
+        (C121)
         (C21)
         edge[->] node[right, opacity=0, text opacity=1]
         {$\checkmark,1$}
         (C211)
+        (C22)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark,1$}
+        (C221)
         (D11)
         edge[->] node[right, opacity=0, text opacity=1]
         {$\checkmark,1$}
         (D111)
+        (D12)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark,1$}
+        (D121)
         (D21)
         edge[->] node[right, opacity=0, text opacity=1]
         {$\checkmark,1$}
         (D211)
+        (D22)
+        edge[->] node[right, opacity=0, text opacity=1]
+        {$\checkmark,1$}
+        (D221)
         ;
       \end{tikzpicture}
     }
@@ -120,7 +289,7 @@
                 %$\feature{A};\ofeature{B};\checkmark \leadsto$
                 % \begin{minipage}{0.35\hsize}
                 %         \centering
-                \scalebox{0.65}
+                \scalebox{0.6}
                 {
                         \begin{tikzpicture}[->,>=stealth',node distance=1.5cm]
                         \node[syntax] (A)   {$\feature{A};\ofeature{B};_{p}(\feature{C};\ofeature{D};_{q}\checkmark)$};
@@ -159,17 +328,35 @@
         \vspace{0.5cm}
         \linefigure
 
-        \caption{Examples of the operational semantics (1/2).\label{example:op1}}
+        \caption{Examples of the operational semantics (2/3).\label{example:op2}}
 \end{figure}
 \begin{figure}[t]
   \linefigure
   \centering
-  \begin{minipage}[t]{0.35\hsize}
+  \begin{minipage}{0.3\hsize}
+    \centering
+    \scalebox{0.6}{%
+      \begin{tikzpicture}[->,>=stealth',node distance=1.5cm]
+        \node[syntax] (A)
+        {$\checkmark\paral(\fB;\checkmark\paral\fC;\checkmark)$};
+        \node[syntax] (B) [below left=1cm and 0cm of A]{$\checkmark\paral(\checkmark\paral\fC;\checkmark)$};
+        \node[syntax] (C) [below right=1cm and 0cm of A]{$\checkmark\paral\fC;\checkmark$};
+        \node[syntax] (D) [below left=7cm and 0cm of A]{$\checkmark\paral(\fB\checkmark\paral\checkmark)$};
+        \node[syntax] (E) [below right=7cm and 0cm of A]{$\fB;\checkmark\paral\checkmark$};
+
+        \node[syntax] (B1) [below left=1cm and 1cm of B]{$\checkmark\paral(\checkmark\paral\checkmark)$};
+        \node[syntax] (B2) [below left=1cm and -0.7cm of B]{$\checkmark\paral(\checkmark)$};
+        \node[syntax] (B3) [below right=1cm and -0.7cm of B]{$(\checkmark\paral\checkmark)$};
+        \node[syntax] (B4) [below right=1cm and 1cm of B]{$\checkmark$};
+
+      \end{tikzpicture}}
+    \end{minipage}
+  \begin{minipage}{0.3\hsize}
     \centering
     % $\feature{A};\ofeature{B};\checkmark \leadsto$
     % \begin{minipage}{0.35\hsize}
     %   \centering
-    \scalebox{0.65}{
+    \scalebox{0.6}{
       \begin{tikzpicture}[->,>=stealth',node distance=1.5cm]
         \node[syntax] (A)   {$\feature{A};\ofeature{B};_{p}(\feature{C};(\feature{D};\checkmark\choice_{q}(\ofeature{E};_{r}\checkmark)))$};
         \node[syntax] (B) [below=1.5cm of A]   {$\ofeature{B};_{p}(\feature{C};(\feature{D};\checkmark\choice_{q}(\ofeature{E};_{r}\checkmark))$};
@@ -215,11 +402,11 @@
       \end{tikzpicture}
     }
   \end{minipage}
-  \begin{minipage}[t]{0.4\hsize}
+  \begin{minipage}{0.3\hsize}
     % $\feature{A};\ofeature{B};\checkmark \leadsto$
                 % \begin{minipage}{0.35\hsize}
                 %   \centering
-    \scalebox{0.65}{
+    \scalebox{0.62}{
       \begin{tikzpicture}[->,>=stealth',node distance=1.5cm]
         \node[syntax] (A)   {$\ofeature{A};_{p}\feature{B};(\ofeature{C};_{q}\checkmark\paral\feature{D};\checkmark)$};
         \node[syntax] (B) [below left=1.5cm and 1.5cm of A]   {$\nil$};
@@ -291,7 +478,7 @@
   \vspace{0.5cm}
   \linefigure
 
-  \caption{Examples of the operational semantics (2/2).\label{example:op2}}
+  \caption{Examples of the operational semantics (3/3).\label{example:op3}}
 \end{figure}
 
 %%% Local Variables:
